# Viaduct

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  meson.build  org.virinvictus.Viaduct.json  patchnotes.md  roadmap.md  spec.md  test_menu.rs  to-test.md  two-plans.md
.github/workflows/: ci.yml
data/: org.virinvictus.Viaduct.appdata.xml  org.virinvictus.Viaduct.desktop  org.virinvictus.Viaduct.gschema.xml
data/themes/: page.html
data/themes/adwaita/: stylesheet.css  template.html
data/themes/appanoose/: dark.css
data/themes/biblioteca/: dark.css
data/themes/hyperlegible/: dark.css
data/themes/newsfax/: dark.css
data/themes/promenade/: dark.css
data/themes/sepia/: dark.css
data/themes/verdana_revival/: dark.css
docs/: background-service-plan.md  debugging.md
docs/screenshots/: .gitkeep
src/: error.rs  lib.rs  main.rs  models.rs  paths.rs  preferences.rs  test_glib.rs
src/database/: accounts.rs  articles.rs  delegate.rs  mod.rs  opml.rs  settings.rs  sync.rs  worker.rs
src/network/: background.rs  cache.rs  credentials.rs  fetcher.rs  inoreader.rs  mod.rs  video_thumbs.rs
src/parser/: date.rs  html.rs  json.rs  mod.rs  xml.rs
src/ui/: actions.rs  article.rs  article_renderer.rs  batch.rs  coalescing_queue.rs  fetch_queue.rs  mod.rs  preferences_dialog.rs  reader_view.rs  shortcuts.ui  sidebar.rs  sidebar_factory.rs  smart_feed.rs  timeline.rs  tree.rs  window.rs  window.ui
tests/: integration_refresh.rs
viaduct/: Cargo.toml  build.rs
viaduct-core/: Cargo.toml
viaduct-core/src/: error.rs  lib.rs  models.rs  paths.rs  smart_feeds.rs
viaduct-core/src/database/: accounts.rs  articles.rs  delegate.rs  mod.rs  opml.rs  settings.rs  sync.rs  worker.rs
viaduct-core/src/network/: activity.rs  background.rs  cache.rs  cache_sweep.rs  credentials.rs  favicon_discovery.rs  feed_discovery.rs  fetcher.rs  http.rs  inoreader.rs  mod.rs  video_thumbs.rs
viaduct-core/src/parser/: date.rs  json.rs  xml.rs
viaduct-core/tests/: integration_refresh.rs
viaduct/src/: fonts.rs  lib.rs  main.rs  preferences.rs  theme.rs  tray.rs
viaduct/src/ui/: actions.rs  activity_dialog.rs  add_feed_dialog.rs  alert.rs  article_pane_view.rs  article_pane_view.ui  article_renderer.rs  article_renderer_widget.rs  article_renderer_widget.ui  avatar.rs  coalescing_queue.rs  fetch_queue.rs  mod.rs  preferences_dialog.rs  refresh.rs  rows.rs  shortcuts.ui  sidebar.rs  sidebar_view.rs  sidebar_view.ui  smart_feed_dialog.rs  status_page.rs  timeline.rs  timeline_view.rs  timeline_view.ui  tree.rs  welcome_dialog.rs  window.rs  window.ui  window_title.rs
