[package]
name = "viaduct"
version = "1.0.11"
edition = "2024"
description = "A fast, native GNOME RSS reader achieving full feature-parity with NetNewsWire."
license = "MIT"
default-run = "viaduct"

[dependencies]
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_7"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "time", "url"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ammonia = "4.0"
crossbeam-channel = "0.5"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
chrono = "0.4"
md-5 = "0.10"
lru = "0.17.0"
readability = "0.3.0"
oo7 = "0.6.0"
ashpd = "0.10"
webkit6 = "0.4"
