[workspace]
members = ["viaduct-core", "viaduct"]
default-members = ["viaduct"]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2024"
license = "MIT"
authors = ["Brandon LaRocque"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled", "time", "url"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "brotli"] }
# escape-html buys the full HTML5 named-entity table, our stand-in for NNW's
# RSParser XMLEntities. Without it unescape() resolves only the five predefined
# XML entities and returns Err on anything else, and the parser's
# `let Ok(text) = e.unescape() else { continue }` then drops the text outright:
# an item titled "Tom &mdash; Jerry" parsed to no title at all.
quick-xml = { version = "0.36", features = ["serialize", "escape-html"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ammonia = "4.0"
crossbeam-channel = "0.5"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
lru = "0.17.0"
readability = "0.3.0"
oo7 = "0.6.0"
ashpd = "0.10"
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
webkit6 = "0.4"
